# midas

./: .gitignore  README.md  app.yml  databricks.yml  deploy.sh  package.json  pyproject.toml  setup.sh  tsconfig.json  vite.config.ts
.build/: app.yaml  app.yml  midas-0.0.0+20260310200519-py3-none-any.whl  midas-0.0.0+20260310205103-py3-none-any.whl  midas-0.0.0+20260311043432-py3-none-any.whl  midas-0.0.0+20260311053223-py3-none-any.whl  midas-0.0.0+20260311053653-py3-none-any.whl  midas-0.0.0+20260311054044-py3-none-any.whl  midas-0.0.0+20260311165239-py3-none-any.whl  midas-0.0.0+20260311170233-py3-none-any.whl  midas-0.0.0+20260311170655-py3-none-any.whl  midas-0.0.0+20260311171340-py3-none-any.whl  midas-0.0.0+20260311171919-py3-none-any.whl  midas-0.0.0+20260311172717-py3-none-any.whl  midas-0.0.0+20260311173028-py3-none-any.whl  midas-0.0.0+20260311173934-py3-none-any.whl  midas-0.0.0+20260311174330-py3-none-any.whl  midas-0.0.0+20260311174807-py3-none-any.whl  midas-0.0.0+20260311175135-py3-none-any.whl  midas-0.0.0+20260311175630-py3-none-any.whl  midas-0.0.0+20260311175926-py3-none-any.whl  midas-0.0.0+20260311180002-py3-none-any.whl  midas-0.0.0+20260311180258-py3-none-any.whl  midas-0.0.0+20260311180713-py3-none-any.whl  midas-0.0.0+20260311184713-py3-none-any.whl  midas-0.0.0+20260311190126-py3-none-any.whl  midas-0.0.0+20260311191720-py3-none-any.whl  midas-0.0.0+20260311194430-py3-none-any.whl  midas-0.0.0.post10.dev0+33bebb3-py3-none-any.whl  midas-0.0.0.post14.dev0+2467495-py3-none-any.whl  midas-0.0.0.post18.dev0+93b49ae-py3-none-any.whl  (+17 more)
(+55 files in other folders)
